# visualqc

./: .bettercodehub.yml  .gitattributes  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  CONTRIBUTING_IDEAS_SUGGESTIONS.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  authors.html  citation.html  cli_alignment.html  cli_defacing.html  cli_diff_mri.html  cli_freesurfer.html  cli_func_mri.html  cli_screenshots.html  cli_t1_mri.html  cmd2pkg  contributing.html  examples.html  examples_alignment.html  examples_defacing.html  examples_diff_mri.html  examples_freesurfer.html  examples_freesurfer_generic.html  examples_func_mri.html  examples_generic.html  examples_t1_mri.html  file_formats.html  gallery_defacing.html  gallery_diffusion_mri.html  gallery_filled.html  gallery_freesurfer.html  gallery_freesurfer_filled.html  gallery_functional_mri.html  (+25 more)
.github/: ISSUE_TEMPLATE.md
.travis/: fake_freesurfer_install
_sources/: citation.rst.txt  cli_alignment.rst.txt  cli_defacing.rst.txt  cli_diff_mri.rst.txt  cli_freesurfer.rst.txt  cli_func_mri.rst.txt  cli_screenshots.rst.txt  cli_t1_mri.rst.txt  examples_alignment.rst.txt  examples_defacing.rst.txt  examples_freesurfer.rst.txt  examples_freesurfer_generic.rst.txt  examples_func_mri.rst.txt  examples_t1_mri.rst.txt  file_formats.rst.txt  gallery_defacing.rst.txt  gallery_diffusion_mri.rst.txt  gallery_filled.rst.txt  gallery_freesurfer.rst.txt  gallery_freesurfer_filled.rst.txt  gallery_functional_mri.rst.txt  gallery_registration_unimodal.rst.txt  gallery_segmentation_volumetric.rst.txt  gallery_t1_mri.rst.txt  index.rst.txt  interface.rst.txt  readme.rst.txt  recommended_usage.rst.txt  usage.rst.txt  usage_all.rst.txt
_static/: documentation_options.js  theme_overrides.css
corticalqa/: __init__.py  _version.py  cli.py
docs/: .gitignore  Makefile  authors.html  citation.rst  cli_alignment.html  cli_screenshots.rst  conf.py  contributing.html  custom.css  examples.rst  examples_defacing.rst  examples_diff_mri.rst  examples_freesurfer.rst  examples_func_mri.html  examples_func_mri.rst  examples_generic.rst  examples_t1_mri.html  examples_t1_mri.rst  file_formats.html  file_formats.rst  gallery_diffusion_mri.rst  gallery_freesurfer.rst  gallery_functional_mri.html  gallery_functional_mri.rst  gallery_registration_unimodal.html  gallery_registration_unimodal.rst  gallery_segmentation_volumetric.html  gallery_segmentation_volumetric.rst  gallery_t1_mri.html  gallery_t1_mri.rst  history.html  how_to.rst  index.html  index.rst  installation.html  installation.rst  interface.html  interface.rst  make.bat  readme.rst  (+10 more)
example_datasets/: id_list  sub26
tests/: __init__.py  test_corticalqa.py
(+61 files in other folders)
