[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "VisualQC"
description = 'Assistive tool for the quality control of neuroimaging data'
readme = "README.rst"
requires-python = ">=3.7"
license = "Apache-2.0"
keywords = ['visualqc', ]
authors = [
    { name = "Pradeep Reddy Raamana", email = "raamana@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    'scipy',
    'numpy',
    'matplotlib>=2.1.1',
    'mrivis',
    'nibabel',
    'scikit-learn',
    'pybids',
    'packaging',
]

dynamic = ["version"]

[project.urls]
Homepage = 'https://github.com/raamana/visualqc'

[project.scripts]
visualqc_t1_mri = "visualqc.__t1_mri__:main"
visualqc_anatomical = "visualqc.__t1_mri__:main"
visualqc_defacing = "visualqc.__defacing__:main"
visualqc_func_mri = "visualqc.__func_mri__:main"
visualqc_diffusion = "visualqc.__diffusion__:main"
visualqc_freesurfer = "visualqc.__freesurfer__:main"
visualqc_alignment = "visualqc.__alignment__:main"
vqcdeface = "visualqc.__defacing__:main"
vqct1 = "visualqc.__t1_mri__:main"
vqcanat = "visualqc.__t1_mri__:main"
vqcfunc = "visualqc.__func_mri__:main"
vqcdwi = "visualqc.__diffusion__:main"
vqcfs = "visualqc.__freesurfer__:main"
vqcalign = "visualqc.__alignment__:main"

[tool.hatch.build]
include = [
    "visualqc/*.py",
    "visualqc/resources/*",
]
exclude = [
    "visualqc/tests/*",
    "example_datasets/*",
    "scripts/*",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "visualqc/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/visualqc",
]
exclude = [
  "/.github",
  "/docs",
]


[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=visualqc --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "visualqc/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
